--- a/VulkanCourseApp.vcxproj
+++ b/VulkanCourseApp.vcxproj
@@ -139,11 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Device.cpp" />
+    <ClCompile Include="Instance.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Device.h" />
+    <ClInclude Include="Instance.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Utilities.h" />
     <ClInclude Include="Window.h" />
