--- a/VulkanCourseApp.vcxproj
+++ b/VulkanCourseApp.vcxproj
@@ -139,17 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Device.cpp" />
-    <ClCompile Include="Instance.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="VkRenderer.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Device.h" />
-    <ClInclude Include="Instance.h" />
-    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="VkRenderer.h" />
     <ClInclude Include="Utilities.h" />
+    <ClInclude Include="VulkanValidation.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
