load vertex buffer

--- a/VulkanCourseApp.vcxproj
+++ b/VulkanCourseApp.vcxproj
@@ -140,10 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="VkRenderer.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="VkRenderer.h" />
     <ClInclude Include="Utilities.h" />
     <ClInclude Include="VulkanValidation.h" />
